<resources>
    <string name="app_name">ULock</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_app_list">AppListActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-4916828819737932/5485212008</string>
    <string name="title_activity_pattern_lock">PatternLockActivity</string>
    <string name="main_title">@string/app_name</string>
    <string name="pref_title_pattern_lock">Pattern lock</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_summary_theme">[ %1$s ]</string>
    <string name="pref_dialog_title_theme">Select theme</string>
    <string-array name="pref_entries_theme">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="pref_title_about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="pattern_lock_title">Pattern lock</string>
    <string name="pref_title_set_pattern">Set unlock pattern</string>
    <string name="pref_summary_set_pattern_none">[ No pattern set ]</string>
    <string name="pref_summary_set_pattern_has">[ Pattern set ]</string>
    <string name="pref_title_pattern_visible">Make pattern visible</string>
    <string name="pref_summary_pattern_visible_off">Pattern will be hidden when drawing</string>
    <string name="pref_summary_pattern_visible_on">Pattern will be visible when drawing</string>
    <string name="pref_title_clear_pattern">Clear unlock pattern</string>
    <string name="pref_dialog_message_clear_pattern">Clear unlock pattern?</string>
    <string name="pattern_cleared">Unlock pattern has been cleared</string>

    <string name="set_pattern_title">Draw Pattern</string>
    <string name="confirm_pattern_title">Confirm Pattern</string>
    <string name="reset_pattern_title">Confirm password to reset pattern</string>
    <string name="reset_pattern_message">This is only a demo.\n\nPress "OK" to reset your unlock pattern.</string>
    <string name="pattern_reset">Unlock pattern has been reset</string>

    <string name="about_title">About</string>
    <string name="about_name">PatternLock</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_credit">Zhang Hai 2016</string>
    <string name="about_github"><a href="https://github.com/DreaminginCodeZH/PatternLock">View on GitHub</a></string>
    <string name="title_activity_gesture_detector">GestureDetectorActivity</string>
    <string name="title_activity_confirm_gesture">ConfirmGestureActivity</string>
    <string name="title_activity_lock_selection">Choose Your Lock Type</string>
    <string name="pin_code_forgot_text">Forgot</string>
    <string name="PhotoVault">Photo Vault</string>
    <string name="pin_code_step_disable">Disable %d-digit Pincode</string>
    <string name="pin_code_step_create">Create a %d-digit Pincode</string>
    <string name="pin_code_step_change">Enter your current %d-digit Pincode</string>
    <string name="pin_code_step_unlock">Enter your %d-digit Pincode</string>
    <string name="pin_code_step_enable_confirm">Confirm your %d-digit Pincode</string>

    <string name="permission_rationale">"Storage permission is needed for fetching images from Gallery."</string>

    <string name="cannot_select_more_than">Cannot select more than </string>
    <string name="items">items</string>
    <string name="file_deleted">file Deleted :</string>
    <string name="file_not_deleted">file not Deleted :</string>
    <string name="please_select_atleast_one_item_to_move">Please select atleast one item to move</string>
    <string name="please_select_atleast_one_item_to_delete">Please select atleast one item to delete</string>
    <string name="folder_created">folder created</string>
    <string name="folder_not_created">folder not created</string>
    <string name="this_folder_already_exists">This folder already exists</string>
    <string name="the_picture_will_be_completely_deleted_and_cannot_be_recovered">The item will be completely deleted and cannot be recovered</string>
    <string name="album_folder">Album Folder</string>
    <string name="do_you_want_to_create_a_new_album_folder">Do you want to create a new album folder ?</string>
    <string name="are_you_sure_you_want_to_move_it_out_of_vault">Are you sure you want to move it out of vault ?</string>
    <string name="move_it">Move It</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="appList">AppList</string>
    <string name="set_Time_and_Date">Set Time &amp; Date</string>
    <string name="select_Photos">Select Photos</string>
    <string name="folder_name">Folder name</string>
    <string name="lock_App">Lock App</string>
    <string name="set_Timer">Set Timer</string>
    <string name="buy_now">BUY NOW</string>
    <string name="PAY$299">PAY $4.99</string>
    <string name="want_to_lock_unlimited_apps_and_remove_ads">Want to lock unlimited apps and remove ads?</string>
    <string name="buy_Premium_Version">Buy Premium Version</string>
    <string name="lock_Unlimited_Apps">Lock Unlimited Apps</string>
    <string name="lock_Three_Apps">Lock Three Apps</string>
    <string name="want_to_lock_multiple_apps">Want to lock multiple apps?</string>
    <string name="Continue">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="please_Enter_the_Password">Please Enter the Password</string>
    <string name="enter_PIN_Code">Enter PIN Code</string>
    <string name="enter_Password">Enter Password</string>
    <string name="PIN_protection_is_mandatory_as_secondary_option_to_unlock_the_app">PIN protection is mandatory as secondary option to unlock the app</string>
    <string name="choose_Protection_Type">Choose Protection Type</string>
    <string name="redraw">Redraw</string>
    <string name="please_Note">Please Note</string>
    <!--<string name="ok">Ok</string>-->
    <!--<string name="ok">Ok</string>-->
    <!--<string name="ok">Ok</string>-->
    <!--<string name="ok">Ok</string>-->
    <!--<string name="ok">Ok</string>-->
    <!--<string name="ok">Ok</string>-->
    <!--<string name="ok">Ok</string>-->






</resources>
