<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl_gopro"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_Note"
        android:padding="15dp"

        android:id="@+id/textView_title"
        android:textSize="19sp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_to_lock_unlimited_apps_and_remove_ads"
        android:layout_margin="@dimen/margin_15"
        android:id="@+id/textView6"
        android:textSize="16sp"
        android:textColor="@android:color/black"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/ok"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:id="@+id/button"
        android:textSize="16sp"
        android:layout_gravity="right"
        android:layout_margin="@dimen/margin_10"
  />
    </LinearLayout>

