<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl_gopro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_text"
        android:layout_marginTop="@dimen/margin_35"
        android:background="@android:color/white"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_Premium_Version"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/margin_40"
        android:textStyle="bold"
        android:id="@+id/textView5"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_to_lock_multiple_apps"
        android:layout_margin="@dimen/margin_10"
        android:id="@+id/textView6"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_vertical|center_horizontal"
         />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lock_Three_Apps"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:id="@+id/button_buynow_three"
            android:textSize="20sp"
            android:layout_margin="@dimen/margin_10"
            />
      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lock_Unlimited_Apps"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:id="@+id/button_buynow"
        android:textSize="20sp"
        android:layout_margin="@dimen/margin_10"
  />
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/gopro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="No image" />
</RelativeLayout>